<?xml version="1.0"?>
<package>
  <name>sclam</name>
  <version>0.0.0</version>
  <description>The sclam package</description>

  <maintainer email="steffen.fuchs2@de.bosch.com">Steffen Fuchs</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ar_track_alvar</build_depend>
  <run_depend>ar_track_alvar</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <export>
  </export>
</package>
